--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,13 @@ html, body {
 }
 .daniel {
     grid-area: 1 / 1 / span 1 / span 2;
+    background-color: hsl(263, 55%, 52%);
+    color: white;
 }
-
+.jonathan {
+    background-color: hsl(217, 19%, 35%);
+    color: white;
+}
 .kira {
     grid-area: 1 / 4 / span 2 / span 1;
 }
