--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ html, body {
     grid-template-rows: 1fr 1fr 1fr;
     height: 620px;
     width: 1200px;
-    gap: 3%;
+    gap: 1%;
     border: solid 1px green;
 }
 
@@ -60,15 +60,18 @@ html, body {
 .long-card {
     border: solid 1px black;
 }
-
+.dark-title {
+    color: hsl(219, 29%, 14%);
+}
+.main-msg {
+    font-size: 20px;
+}
 .author {
     display: flex;
     align-items: center;
     gap: 3%;
 }
 .author-details {
-    margin: 0;
-    padding: 0;
 }
 img {
     border-radius: 100px;
@@ -78,8 +81,12 @@ img {
 
 .card-p {
     color: hsl(0, 0%, 81%);
+    font-size: 16px;
 }
-
+.dark-p {
+    color: hsl(219, 29%, 14%);
+    opacity: 0.7;
+}
 .verified {
     color: hsl(0, 0%, 81%);
 }
