--- a/styles.css
+++ b/styles.css
@@ -62,11 +62,16 @@ html, body {
 .long-card {
     border: solid 1px black;
 }
+.long-card .card-p {
+    height: 300px;
+    width: 230px;
+    margin-top: 20%;
+}
 .dark-title {
     color: hsl(219, 29%, 14%);
 }
 .main-msg {
-    font-size: 20px;
+    font-size: 24px;
     height: 70px;
 }
 .author {
@@ -84,6 +89,7 @@ img {
 .card-p {
     color: hsl(0, 0%, 81%);
     font-size: 13px;
+    height: 80px;
 }
 .dark-p {
     color: hsl(219, 29%, 14%);
