--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,11 @@ html, body {
 }
 .kira {
     grid-area: 1 / 4 / span 2 / span 1;
+    background-color: white;
 }
-
+.jeanette {
+    background-color: white;
+}
 .patrick {
     grid-area: 2 / 2 / span 1 / span 2;
     background-color: hsl(219, 29%, 14%);
@@ -112,22 +115,39 @@ img {
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 2300px;
+        justify-content: center;
+        height: 1700px;
     }
     .card {
-        height: 400px;
         width: 300px;
+        display: flex;
+        flex-direction: column;
+        
     }
     .daniel {
-        gap: 15%;
+        height: 340px;
+    }
+    .daniel .card-p,
+    .patrick .card-p {
+        margin-top: 15%;
+    }
+    .jeanette,
+    .jonathan{
+        height: 220px;
+    }
+    .patrick {
+        height: 320px;
     }
     .kira .dark-p {
-        width: 250px;
-        margin-top: -5%;
-        padding: 0;
+        margin-top: 5%;
+        width: 300px;
+        height: 220px;
     }
     .main-msg {
-        font-size: 20px;
-        height: 70px;
+        font-size: 16px;
+        height: 40px;
+    }
+    .card-p {
+        font-size: 12px;
     }
 }
