--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,11 @@ html, body {
     grid-area: 1 / 1 / span 1 / span 2;
     background-color: hsl(263, 55%, 52%);
     color: white;
+    background-image: url(./images/bg-pattern-quotation.svg);
+    background-size: 20% 40%;
+    background-repeat: no-repeat;
+    background-position-y: top;
+    background-position-x: 80%;
 }
 .jonathan {
     background-color: hsl(217, 19%, 35%);
